# Django

./: pyproject.toml
1일_구구단페이지/config/: settings.py
1일_구구단페이지/templates/: movie.html
blog/: db.sqlite3  pyproject.toml
blog/blog/: admin.py  models.py  views.py
blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_rename_context_blog_content.py  0003_blog_author.py
blog/config/: settings.py  urls.py
blog/member/: views.py
blog/templates/: blog_detail.html  blog_list.html
blog/templates/registration/: login.html
config/: urls.py
templates/: book_detail.html  book_list.html  gugu.html  movies.html
