[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["romiii35 <romiii9735@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
django = "^5.2.6"
ipython = "^9.5.0"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
